edit basic template-index.html,style.css

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 	<head>
 		<title>My Portfolio</title>
+		<link rel="stylesheet" type="text/css" href="./css/style.css"> 
 	</head>
 	<body>
-		<h1>Shaloo Tulsyan</h1>
-		<p>This is my first portfolio</p>
+		<h1>My Portfolio</h1>
+		<p>Hi, I am Shaloo Tulsyan</p>
+		<p>This is basic Layout</p>
 	</body>
 </html>
 
