--- a/index.html
+++ b/index.html
@@ -11,7 +11,26 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+		<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <a class="navbar-brand" href="#">Shaloo Tulsyan</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">WHO</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">WHAT</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">WHERE</a>
+      </li>
+    </ul>
+    </div>
+</nav>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
