--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
+		<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
     <title>Hello, world!</title>
   </head>
   <body>
-		<nav class="navbar navbar-expand-sm navbar-light bg-light">
+		<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
   <a class="navbar-brand" href="#">Shaloo Tulsyan</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -20,10 +20,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">WHO</a>
+        <a class="nav-link" href="#who">WHO</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">WHAT</a>
+        <a class="nav-link" href="#what">WHAT</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">WHERE</a>
@@ -31,6 +31,25 @@
     </ul>
     </div>
 </nav>
+
+<div id="who" class="jumbotron" style='background-color:white'>
+	<div class="container">
+		<img src="https://media.licdn.com/dms/image/C5103AQEpa7SRFYNK3A/profile-displayphoto-shrink_800_800/0?e=1554940800&v=beta&t=hkq_cS0nmAkaqTO4cqG1HYUjcP9IV7XwJH7IJgun36Q"
+		class="rounded-circle mx-auto d-block"  alt="Shaloo Tulsyan" width="180" height="180">
+		<div class="container text-center my-4">
+			<h1 style="font-family: 'Montserrat,font-weight:bol', sans-serif">Shaloo Tulsyan</h1>
+			<h5 style="font-family: 'Open Sans', sans-serif" class="my-3" >WEB and SAP Developer from Bengaluru, India </h5>
+			<h5 style="font-family: 'Open Sans', sans-serif" class="my-3">Currently working with Accenture Bengaluru</h5>
+		</div>
+	</div>
+</div>
+
+<div id="what" class="jumbotron">
+	<div class="container text-center">
+		NEXT CONTAINER
+	</div>
+
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
