First section image top margin fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 		<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="#">Shaloo Tulsyan</a>
+  <a class="navbar-brand" href="#">MY PORTFOLIO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -32,7 +32,7 @@
     </div>
 </nav>
 
-<div id="who" class="jumbotron" style='background-color:white'>
+<div id="who" class="jumbotron mt-5" style='background-color:white'>
 	<div class="container">
 		<img src="https://media.licdn.com/dms/image/C5103AQEpa7SRFYNK3A/profile-displayphoto-shrink_800_800/0?e=1554940800&v=beta&t=hkq_cS0nmAkaqTO4cqG1HYUjcP9IV7XwJH7IJgun36Q"
 		class="rounded-circle mx-auto d-block"  alt="Shaloo Tulsyan" width="180" height="180">
