Project section added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<!--External stylesheet -->
+<link rel="stylesheet" href="./css/style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
@@ -37,16 +39,30 @@
 		<img src="https://media.licdn.com/dms/image/C5103AQEpa7SRFYNK3A/profile-displayphoto-shrink_800_800/0?e=1554940800&v=beta&t=hkq_cS0nmAkaqTO4cqG1HYUjcP9IV7XwJH7IJgun36Q"
 		class="rounded-circle mx-auto d-block"  alt="Shaloo Tulsyan" width="180" height="180">
 		<div class="container text-center my-4">
-			<h1 style="font-family: 'Montserrat,font-weight:bol', sans-serif">Shaloo Tulsyan</h1>
+			<h1 style="font-family: 'Montserrat', sans-serif">Shaloo Tulsyan</h1>
 			<h5 style="font-family: 'Open Sans', sans-serif" class="my-3" >WEB and SAP Developer from Bengaluru, India </h5>
 			<h5 style="font-family: 'Open Sans', sans-serif" class="my-3">Currently working with Accenture Bengaluru</h5>
 		</div>
 	</div>
 </div>
 
-<div id="what" class="jumbotron">
-	<div class="container text-center">
-		NEXT CONTAINER
+
+<div id="what" class="jumbotron p-4">
+	<div class="container " style= "display:flex; flex-direction:column;">
+
+      <h2 class="text-center" style="font-family: 'Montserrat', sans-serif">Projects</h2>
+
+    <div style="display:flex; padding:5px; justify-content:space-evenly;flex-wrap: wrap;">
+<div class="card m-4" style="min-height:250px; min-width:250px;">
+project1
+</div>
+<div class="card m-4" style="min-height:250px; min-width:250px;">
+project2
+</div>
+<div class="card m-4" style="min-height:250px; min-width:250px;">
+project3
+</div>
+    </div>
 	</div>
 
 </div>
