--- a/index.html
+++ b/index.html
@@ -1,76 +1,180 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!--External stylesheet -->
-<link rel="stylesheet" href="./css/style.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
-    <title>Hello, world!</title>
-  </head>
-  <body>
-		<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="#">MY PORTFOLIO</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+    crossorigin="anonymous">
+  <!--External stylesheet -->
+  <link rel="stylesheet" href="./css/style.css">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#who">WHO</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#what">WHAT</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">WHERE</a>
-      </li>
-    </ul>
+  <title>Hello, world!</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-sm navbar-light navbar-config fixed-top">
+    <a class="navbar-brand" href="#"><strong>MY PORTFOLIO</strong></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#intro">Intro</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#skills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#projects">Contacts</a>
+        </li>
+      </ul>
     </div>
-</nav>
+  </nav>
 
-<div id="who" class="jumbotron mt-5" style='background-color:white'>
-	<div class="container">
-		<img src="https://media.licdn.com/dms/image/C5103AQEpa7SRFYNK3A/profile-displayphoto-shrink_800_800/0?e=1554940800&v=beta&t=hkq_cS0nmAkaqTO4cqG1HYUjcP9IV7XwJH7IJgun36Q"
-		class="rounded-circle mx-auto d-block"  alt="Shaloo Tulsyan" width="180" height="180">
-		<div class="container text-center my-4">
-			<h1 style="font-family: 'Montserrat', sans-serif">Shaloo Tulsyan</h1>
-			<h5 style="font-family: 'Open Sans', sans-serif" class="my-3" >WEB and SAP Developer from Bengaluru, India </h5>
-			<h5 style="font-family: 'Open Sans', sans-serif" class="my-3">Currently working with Accenture Bengaluru</h5>
-		</div>
-	</div>
-</div>
+  <div id="intro" class="jumbotron mt-5" style='background-color:white'>
+    <div class="container">
+      <img src="https://media.licdn.com/dms/image/C5103AQEpa7SRFYNK3A/profile-displayphoto-shrink_800_800/0?e=1554940800&v=beta&t=hkq_cS0nmAkaqTO4cqG1HYUjcP9IV7XwJH7IJgun36Q"
+        class="rounded-circle mx-auto d-block" alt="Shaloo Tulsyan" width="180" height="180">
+      <div class="container text-center my-4">
+        <h1 style="font-family: 'Montserrat', sans-serif">Shaloo Tulsyan</h1>
+        <h5 style="font-family: 'Open Sans', sans-serif" class="my-3">WEB and SAP Developer from Bengaluru, India </h5>
+        <h5 style="font-family: 'Open Sans', sans-serif" class="my-3">Currently working with Accenture Bengaluru</h5>
+      </div>
+    </div>
+  </div>
 
 
-<div id="what" class="jumbotron p-4">
-	<div class="container " style= "display:flex; flex-direction:column;">
+  <div id="skills" class="jumbotron p-4">
+    <div class="container " style="display:flex; flex-direction:column;">
+
+      <h2 class="text-center" style="font-family: 'Montserrat', sans-serif;">Skills</h2>
+
+      <div style="display:flex; padding:5px; justify-content:space-evenly;flex-wrap: wrap;align-items:flex-start">
+        <div class="card-noborder m-4" style="min-height:200px;flex-direction: column; min-width:200px;">
+          <h3>Front End</h3>
+          <ul class="list-group">
+            <li class="list-group-item list-item">React Native</li>
+            <li class="list-group-item list-item">React</li>
+            <li class="list-group-item list-item">Bootstrap 4.0 and above</li>
+            <li class="list-group-item list-item">Jquery</li>
+            <li class="list-group-item list-item">CSS</li>
+            <li class="list-group-item list-item">HTML</li>
+          </ul>
+        </div>
+        <div class="card-noborder m-4" style="min-height:200px;flex-direction: column; min-width:200px;">
+          <h3>Programming</h3>
+          <ul class="list-group">
+            <li class="list-group-item list-item">Javascript</li>
+            <li class="list-group-item list-item">ES6</li>
+            <li class="list-group-item list-item">SAP ABAP</li>
+            <li class="list-group-item list-item"></li>
+          </ul>
+        </div>
+        <div class="card-noborder m-4" style="min-height:200px;flex-direction: column; min-width:200px;">
+          <h3>OS</h3>
+          <ul class="list-group">
+            <li class="list-group-item list-item">Linux</li>
+            <li class="list-group-item list-item">Windows</li>
+          </ul>
+        </div>
+        <div class="card-noborder m-4" style="min-height:200px;flex-direction: column; min-width:200px;">
+          <h3>Other</h3>
+          <ul class="list-group">
+            <li class="list-group-item list-item">SAP BAPI</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <div id="projects" class="jumbotron p-4">
+    <div class="container " style="display:flex; flex-direction:column;">
 
       <h2 class="text-center" style="font-family: 'Montserrat', sans-serif">Projects</h2>
 
-    <div style="display:flex; padding:5px; justify-content:space-evenly;flex-wrap: wrap;">
-<div class="card m-4" style="min-height:250px; min-width:250px;">
-project1
-</div>
-<div class="card m-4" style="min-height:250px; min-width:250px;">
-project2
-</div>
-<div class="card m-4" style="min-height:250px; min-width:250px;">
-project3
-</div>
+      <div style="display:flex; padding:5px; justify-content:space-evenly;flex-wrap: wrap;">
+        <div id="p1" class="card m-4" style="min-height:250px; min-width:250px;">
+          <div class="text-center">
+            <h3 style="color:white"><strong>Github Page</strong></h3>
+            <a class="anchor" href="https://shalootulsyan.github.io" target="_blank">shalootulsyan.github.io</a>
+          </div>
+          <div class="text-center p-2 m-0" style="border:2px white solid;border-radius: 10px;">
+            <p style="color:white;" class="p-0 m-0">html, css, bootstrap 4.2</p>
+          </div>
+        </div class="text-center">
+        <div id="p2" class="card m-4" style="min-height:250px; min-width:250px;">
+          <div class="text-center">
+            <h3 style="color:white"><strong>Basic Todo App</strong></h3>
+            <a class="anchor" href="https://codesandbox.io/s/3qkmqjlop" target="_blank">codesandbox.io</a>
+          </div>
+          <div class="text-center p-2 m-0" style="border:2px white solid;border-radius: 10px;">
+            <p style="color:white;" class="p-0 m-0">React</p>
+          </div>
+        </div>
+        <div id="p3" class="card m-4" style="min-height:250px; min-width:250px;">
+          <div class="text-center">
+            <h3 style="color:white"><strong>Coming Soon</strong></h3>
+            <a class="anchor" href="#">#coming soon</a>
+          </div>
+          <div class="text-center p-2 m-0" style="border:2px white solid;border-radius: 10px;">
+            <p style="color:white;" class="p-0 m-0">React Native</p>
+          </div>
+        </div>
+      </div>
     </div>
-	</div>
 
-</div>
+  </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-  </body>
+  <!-- Footer -->
+  <footer class="page-footer font-small bg-dark navbar-config">
+
+    <!-- Footer Elements -->
+    <div class="jumbotron container text-center" style="border-top-left-radius:0px!important;border-top-right-radius: 0px!important;display:flex;justify-content: space-evenly;align-items: center;background-color:white!important;align-self:center">
+      <div style="display:flex;flex-direction: column;align-items: center" class="p-3">
+        <i class="fab fa-linkedin" style="font-size: 2rem"></i>
+        <a href="" class="anchor text-dark p-2">Linkedin Profile</a>
+      </div>
+      <div style="display:flex;flex-direction: column;align-items: center;" class="p-3">
+        <i class="fas fa-envelope" style="font-size: 2rem"></i>
+        <a href="" class="anchor text-dark p-2">tulsyanshaloo@gmail.com</a>
+      </div>
+    </div>
+    <!-- Footer Elements -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">
+      <a class="anchor" href="#"> Shaloo Tulsyan, 2019</a>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
+
+  <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
+    crossorigin="anonymous"></script>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
