footer alignment adjustment

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <footer class="page-footer font-small bg-dark navbar-config">
 
     <!-- Footer Elements -->
-    <div class="jumbotron container text-center" style="border-top-left-radius:0px!important;border-top-right-radius: 0px!important;display:flex;justify-content: space-evenly;align-items: center;background-color:white!important;align-self:center">
+    <div class="jumbotron container text-center" style="border-top-left-radius:0px!important;border-top-right-radius: 0px!important;display:flex;justify-content: space-evenly;align-items: center;background-color:white!important;align-self:center;flex-wrap: wrap">
       <div style="display:flex;flex-direction: column;align-items: center" class="p-3">
         <i class="fab fa-linkedin" style="font-size: 2rem"></i>
         <a href="" class="anchor text-dark p-2">Linkedin Profile</a>
